--- a/src/components/albums/albums-list.css
+++ b/src/components/albums/albums-list.css
@@ -1,11 +1,11 @@
 .search-album {
-  background-color: #FFF2 !important;
+  background-color: #fff2 !important;
   color: white !important;
   border-color: white !important;
 }
 
 .search-album::placeholder,
-.back-to-genres,
+.back-to,
 .genre-header,
 .h5 {
   color: white !important;
@@ -13,7 +13,7 @@
 }
 
 .genre-col {
-  background-color: #FFF3;
+  background-color: #fff3;
 }
 
 .header-logo {
