--- a/src/App.css
+++ b/src/App.css
@@ -1,6 +1,12 @@
-@import url('http://fonts.cdnfonts.com/css/gill-sans-mt');
+@import url('https://fonts.cdnfonts.com/css/gill-sans-mt');
 @import url('https://fonts.googleapis.com/css2?family=Lato&display=swap');
 
 .App {
   font-family: 'Gill Sans', 'Gill Sans MT', Calibri, 'Trebuchet MS', sans-serif;
+  max-width: 40rem;
+}
+
+#root {
+  display: flex;
+  justify-content: center;
 }
